crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__redefined-while-unused_F811_8.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F811 [*] Redefinition of unused `os` from line 4
 --> F811_8.py:5:12
  |
3 | try:
4 |     import os
  |            -- previous definition of `os` here
5 |     import os
  |            ^^ `os` redefined here
6 | except:
7 |     pass
  |
help: Remove definition: `os`
  |
4 |     import os
  -     import os
5 | except:
  |
