crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__undefined-export_F822_0.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F822 Undefined name `b` in `__all__`
 --> F822_0.py:3:17
  |
1 | a = 1
2 |
3 | __all__ = ["a", "b"]
  |                 ^^^
